--- a/gugudan.html
+++ b/gugudan.html
@@ -6,6 +6,6 @@
     <title>gugudan</title>
   </head>
   <body>
-    <script scr="gugudan.js"></script>
+    <script src="gugu.js"></script>
   </body>
 </html>
