--- a/tictacto.html
+++ b/tictacto.html
@@ -7,8 +7,11 @@
     <style>
       td {
         border: 1px solid black;
-        width: 50px;
-        height: 50px;
+        width: 100px;
+        height: 100px;
+        text-align: center;
+        font-weight: bold;
+        font-size: 45px;
       }
     </style>
   </head>
