--- a/가위바위보.html
+++ b/가위바위보.html
@@ -4,16 +4,23 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>가위바위보</title>
+    <style>
+      #computer {
+        width: 150px;
+        height: 243px;
+        background: url("https://en.pimg.jp/023/182/267/1/23182267.jpg");
+        background-repeat: no-repeat;
+        background-position: 0px 0px;
+      }
+    </style>
   </head>
   <body>
-    <div id="computer">
-      <img src="가위바위보.jpeg" />
-    </div>
+    <div id="computer"></div>
 
     <div>
-      <button id="바위">바위</button>
-      <button id="가위">가위</button>
-      <button id="보"></button>
+      <button class="btn" id="바위">바위</button>
+      <button class="btn" id="가위">가위</button>
+      <button class="btn" id="보">보</button>
     </div>
     <script src="가위바위보.js"></script>
   </body>
