--- a/지뢰찾기.html
+++ b/지뢰찾기.html
@@ -4,12 +4,19 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>지뢰찾기</title>
-    <style></style>
+    <style>
+      td {
+        border: 1px solid black;
+        border-collapse: collapse;
+        width: 20px;
+        height: 20px;
+      }
+    </style>
   </head>
   <body>
-    <input id="hor" type="number" placeholder="가로" />
-    <input id="ver" type="number" placeholder="세로" />
-    <input id="mine" type="number" placeholder="지뢰" />
+    <input id="hor" type="number" placeholder="가로" value="10" />
+    <input id="ver" type="number" placeholder="세로" value="10" />
+    <input id="mine" type="number" placeholder="지뢰" value="5" />
     <button id="exec">실행</button>
     <table id="table">
       <thead>
