--- a/findmine.html
+++ b/findmine.html
@@ -1,22 +1,35 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="utf-8" />
     <title>지뢰찾기</title>
     <style>
-      td {
-        border: 1px solid black;
+      table {
         border-collapse: collapse;
+      }
+      td {
+        border: 1px solid #bbb;
+        text-align: center;
+        line-height: 20px;
         width: 20px;
         height: 20px;
+        background: #222;
+      }
+      td.opened {
+        background: white;
+      }
+      td.flag {
+        background: red;
+      }
+      td.question {
+        background: orange;
       }
     </style>
   </head>
   <body>
     <input id="hor" type="number" placeholder="가로" value="10" />
     <input id="ver" type="number" placeholder="세로" value="10" />
-    <input id="mine" type="number" placeholder="지뢰" value="5" />
+    <input id="mine" type="number" placeholder="지뢰" value="20" />
     <button id="exec">실행</button>
     <table id="table">
       <thead>
@@ -26,6 +39,7 @@
       </thead>
       <tbody></tbody>
     </table>
-    <script src="지뢰찾기.js"></script>
+    <div id="result"></div>
+    <script src="findmine.js"></script>
   </body>
 </html>
