--- a/tictacto.html
+++ b/tictacto.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>tictacto</title>
     <style>
+      table {
+        border-collapse: collapse;
+      }
       td {
         border: 1px solid black;
         width: 100px;
