--- a/card.html
+++ b/card.html
@@ -1,20 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>card</title>
+    <meta charset="utf-8" />
+    <title>짝맞추기</title>
     <style>
-      body {
-        margin: 0;
-      }
       .card {
+        display: inline-block;
+        margin-right: 20px;
+        margin-bottom: 20px;
         width: 70px;
         height: 100px;
-        border: 1px solid black;
-        display: inline-flex;
-        margin: 20px;
+        perspective: 140px;
       }
+
       .card-inner {
         position: relative;
         width: 100%;
@@ -23,38 +21,31 @@
         transition: transform 0.8s;
         transform-style: preserve-3d;
       }
+
       .card.flipped .card-inner {
         transform: rotateY(180deg);
       }
+
+      .card-front {
+        background: navy;
+      }
+
       .card-front,
       .card-back {
-        display: flex;
-        flex-direction: column;
         position: absolute;
         width: 100%;
         height: 100%;
+        border: 1px solid black;
         backface-visibility: hidden;
-        justify-content: center;
-        font-weight: bold;
       }
-      .card-front {
-        background-color: navy;
-      }
+
       .card-back {
-        background-color: orangered;
         transform: rotateY(180deg);
       }
     </style>
   </head>
   <body>
-    <div class="all">
-      <div class="card">
-        <div class="card-inner">
-          <div class="card-front">Front</div>
-          <div class="card-back">Back</div>
-        </div>
-      </div>
-    </div>
+    <div id="wrapper"></div>
     <script src="card.js"></script>
   </body>
 </html>
